# frida-tools

./: Makefile  cindex-test.cpp  foo.h  gen-mega-include.py  mega-include.h  objc-bridge-attr-test.h  preprocessed.h
agents/: meson.build
agents/report-exceptions/: agent.ts  meson.build  package-lock.json  package.json
agents/tracer/: package-lock.json  package.json
frida_tools/: application.py  tracer.py
